--- a/ghost-theme/page.hbs
+++ b/ghost-theme/page.hbs
@@ -3,14 +3,16 @@
 {{#post}}
 <article class="post-full page-full">
     <div class="container container-narrow">
-        <header class="post-header">
-            <h1 class="post-title">{{title}}</h1>
-        </header>
+        {{#if @page.show_title_and_feature_image}}
+            <header class="post-header">
+                <h1 class="post-title">{{title}}</h1>
+            </header>
 
-        {{#if feature_image}}
-            <figure class="post-image">
-                <img src="{{feature_image}}" alt="{{title}}" />
-            </figure>
+            {{#if feature_image}}
+                <figure class="post-image">
+                    <img src="{{feature_image}}" alt="{{title}}" />
+                </figure>
+            {{/if}}
         {{/if}}
 
         <section class="post-content">
